Fixed broken sliding-menu interaction when the ons-page wrap a sliding-menu element.

--- a/framework/css/common.css
+++ b/framework/css/common.css
@@ -17,6 +17,12 @@ limitations under the License.
 
 @import url("font_awesome/css/font-awesome.min.css");
 
+/* cutsom elements */
+ons-page, ons-screen, ons-navigator,
+ons-split-view, ons-sliding-menu, ons-tabbar {
+  display: block;
+}
+
 * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -55,3 +61,5 @@ ons-toolbar + .page__content {
 .page__content::-webkit-scrollbar {
   display: none;
 }
+
+
